--- a/Contact.html
+++ b/Contact.html
@@ -9,7 +9,7 @@
 <link rel="stylesheet" href="https://www.w3schools.com/lib/w3-theme-teal.css">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-<link rel="stylesheet" href="css/bodyimagestyle.css">
+<link rel="stylesheet" href="w3/w3.css">
 <style>
 
 </style>
