--- a/index.html
+++ b/index.html
@@ -245,8 +245,8 @@
             <div class="baguetteBoxThree gallery">
                 <div class="w3-third w3-margin-bottom w3-animate-zoom">
                    <div class="image-top">
-                     <a class="image-top" href="image/image7.jpg" data-caption="Goldern Bangla" style="width:99%;">
-                      <img class="img img-fluid" src="image/image7.jpg" alt="" style="width:100%;">
+                     <a class="image-top" href="image/amazing/1.jpg" data-caption="Goldern Bangla" style="width:99%;">
+                      <img class="img img-fluid" src="image/amazing/1.jpg" alt="" style="width:100%;">
                         <div class="like-view">
                              <button type="button" class="btn btn-secondary" title="view">
                                  <i class="fa fa-eye"></i>
@@ -263,8 +263,8 @@
             </div>
              <div class="w3-third w3-margin-bottom w3-animate-zoom">
                 <div class="image-top">
-                  <a class="image-top" href="image/image7.jpg" data-caption="Goldern Bangla" style="width:99%;">
-                    <img class="img img-fluid" src="image/image7.jpg" alt="" style="width:100%;">
+                  <a class="image-top" href="image/amazing/3.jpg" data-caption="Goldern Bangla" style="width:99%;">
+                    <img class="img img-fluid" src="image/amazing/3.jpg" alt="" style="width:100%;">
                       <div class="like-view">
                          <button type="button" class="btn btn-secondary" title="view">
                            <i class="fa fa-eye"></i>
@@ -281,8 +281,8 @@
              </div>
               <div class="w3-third w3-margin-bottom w3-animate-zoom">
                 <div class="image-top">
-                 <a class="image-top" href="image/image7.jpg" data-caption="Goldern Bangla" style="width:99%;">
-                   <img class="img img-fluid" src="image/image7.jpg" alt="" style="width:100%;">
+                 <a class="image-top" href="image/amazing/4.jpg" data-caption="Goldern Bangla" style="width:99%;">
+                   <img class="img img-fluid" src="image/amazing/4.jpg" alt="" style="width:100%;">
                    <div class="like-view">
                     <button type="button" class="btn btn-secondary" title="view">
                        <i class="fa fa-eye"></i>
@@ -313,8 +313,8 @@
             <div class="baguetteBoxFour gallery">
                 <div class="w3-third w3-margin-bottom w3-animate-zoom">
                    <div class="image-top">
-                     <a class="image-top" href="image/image7.jpg" data-caption="Goldern Bangla" style="width:99%;">
-                      <img class="img img-fluid" src="image/image7.jpg" alt="" style="width:100%;">
+                     <a class="image-top" href="image/Trees/1.jpg" data-caption="Goldern Bangla" style="width:99%;">
+                      <img class="img img-fluid" src="image/Trees/1.jpg" alt="" style="width:100%;">
                         <div class="like-view">
                              <button type="button" class="btn btn-secondary" title="view">
                                  <i class="fa fa-eye"></i>
@@ -331,8 +331,8 @@
             </div>
              <div class="w3-third w3-margin-bottom w3-animate-zoom">
                 <div class="image-top">
-                  <a class="image-top" href="image/image7.jpg" data-caption="Goldern Bangla" style="width:99%;">
-                    <img class="img img-fluid" src="image/image7.jpg" alt="" style="width:100%;">
+                  <a class="image-top" href="image/Trees/2.jpg" data-caption="Goldern Bangla" style="width:99%;">
+                    <img class="img img-fluid" src="image/Trees/2.jpg" alt="" style="width:100%;">
                       <div class="like-view">
                          <button type="button" class="btn btn-secondary" title="view">
                            <i class="fa fa-eye"></i>
@@ -349,8 +349,8 @@
              </div>
               <div class="w3-third w3-margin-bottom w3-animate-zoom">
                 <div class="image-top">
-                 <a class="image-top" href="image/image7.jpg" data-caption="Goldern Bangla" style="width:99%;">
-                   <img class="img img-fluid" src="image/image7.jpg" alt="" style="width:100%;">
+                 <a class="image-top" href="image/Trees/3.jpg" data-caption="Goldern Bangla" style="width:99%;">
+                   <img class="img img-fluid" src="image/Trees/3.jpg" alt="" style="width:100%;">
                    <div class="like-view">
                     <button type="button" class="btn btn-secondary" title="view">
                        <i class="fa fa-eye"></i>
@@ -381,8 +381,8 @@
             <div class="baguetteBoxFive gallery">
                 <div class="w3-third w3-margin-bottom w3-animate-zoom">
                    <div class="image-top">
-                     <a class="image-top" href="image/image7.jpg" data-caption="Goldern Bangla" style="width:99%;">
-                      <img class="img img-fluid" src="image/image7.jpg" alt="" style="width:100%;">
+                     <a class="image-top" href="image/river/12.jpg" data-caption="Goldern Bangla" style="width:99%;">
+                      <img class="img img-fluid" src="image/river/12.jpg" alt="" style="width:100%;">
                         <div class="like-view">
                              <button type="button" class="btn btn-secondary" title="view">
                                  <i class="fa fa-eye"></i>
@@ -399,8 +399,8 @@
             </div>
              <div class="w3-third w3-margin-bottom w3-animate-zoom">
                 <div class="image-top">
-                  <a class="image-top" href="image/image7.jpg" data-caption="Goldern Bangla" style="width:99%;">
-                    <img class="img img-fluid" src="image/image7.jpg" alt="" style="width:100%;">
+                  <a class="image-top" href="image/river/11.jpg" data-caption="Goldern Bangla" style="width:99%;">
+                    <img class="img img-fluid" src="image/river/11.jpg" alt="" style="width:100%;">
                       <div class="like-view">
                          <button type="button" class="btn btn-secondary" title="view">
                            <i class="fa fa-eye"></i>
@@ -417,8 +417,8 @@
              </div>
               <div class="w3-third w3-margin-bottom w3-animate-zoom">
                 <div class="image-top">
-                 <a class="image-top" href="image/image7.jpg" data-caption="Goldern Bangla" style="width:99%;">
-                   <img class="img img-fluid" src="image/image7.jpg" alt="" style="width:100%;">
+                 <a class="image-top" href="image/river/10.jpg" data-caption="Goldern Bangla" style="width:99%;">
+                   <img class="img img-fluid" src="image/river/10.jpg" alt="" style="width:100%;">
                    <div class="like-view">
                     <button type="button" class="btn btn-secondary" title="view">
                        <i class="fa fa-eye"></i>
@@ -449,8 +449,8 @@
               <div class="baguetteBoxThree gallery">
                   <div class="w3-third w3-margin-bottom w3-animate-zoom">
                      <div class="image-top">
-                       <a class="image-top" href="image/image7.jpg" data-caption="Goldern Bangla" style="width:99%;">
-                        <img class="img img-fluid" src="image/image7.jpg" alt="" style="width:100%;">
+                       <a class="image-top" href="image/birds/1.jpg" data-caption="Goldern Bangla" style="width:99%;">
+                        <img class="img img-fluid" src="image/birds/1.jpg" alt="" style="width:100%;">
                           <div class="like-view">
                                <button type="button" class="btn btn-secondary" title="view">
                                    <i class="fa fa-eye"></i>
@@ -467,8 +467,8 @@
               </div>
                <div class="w3-third w3-margin-bottom w3-animate-zoom">
                   <div class="image-top">
-                    <a class="image-top" href="image/image7.jpg" data-caption="Goldern Bangla" style="width:99%;">
-                      <img class="img img-fluid" src="image/image7.jpg" alt="" style="width:100%;">
+                    <a class="image-top" href="image/birds/2.jpg" data-caption="Goldern Bangla" style="width:99%;">
+                      <img class="img img-fluid" src="image/birds/2.jpg" alt="" style="width:100%;">
                         <div class="like-view">
                            <button type="button" class="btn btn-secondary" title="view">
                              <i class="fa fa-eye"></i>
@@ -485,8 +485,8 @@
                </div>
                 <div class="w3-third w3-margin-bottom w3-animate-zoom">
                   <div class="image-top">
-                   <a class="image-top" href="image/image7.jpg" data-caption="Goldern Bangla" style="width:99%;">
-                     <img class="img img-fluid" src="image/image7.jpg" alt="" style="width:100%;">
+                   <a class="image-top" href="image/birds/4.jpg" data-caption="Goldern Bangla" style="width:99%;">
+                     <img class="img img-fluid" src="image/birds/4.jpg" alt="" style="width:100%;">
                      <div class="like-view">
                       <button type="button" class="btn btn-secondary" title="view">
                          <i class="fa fa-eye"></i>
@@ -517,8 +517,8 @@
               <div class="baguetteBoxTwo gallery">
                   <div class="w3-third w3-margin-bottom w3-animate-zoom">
                      <div class="image-top">
-                       <a class="image-top" href="image/image7.jpg" data-caption="Goldern Bangla" style="width:99%;">
-                        <img class="img img-fluid" src="image/image7.jpg" alt="" style="width:100%;">
+                       <a class="image-top" href="image/city/1.jpg" data-caption="Goldern Bangla" style="width:99%;">
+                        <img class="img img-fluid" src="image/city/1.jpg" alt="" style="width:100%;">
                           <div class="like-view">
                                <button type="button" class="btn btn-secondary" title="view">
                                    <i class="fa fa-eye"></i>
@@ -535,8 +535,8 @@
               </div>
                <div class="w3-third w3-margin-bottom w3-animate-zoom">
                   <div class="image-top">
-                    <a class="image-top" href="image/image7.jpg" data-caption="Goldern Bangla" style="width:99%;">
-                      <img class="img img-fluid" src="image/image7.jpg" alt="" style="width:100%;">
+                    <a class="image-top" href="image/city/2.jpg" data-caption="Goldern Bangla" style="width:99%;">
+                      <img class="img img-fluid" src="image/city/2.jpg" alt="" style="width:100%;">
                         <div class="like-view">
                            <button type="button" class="btn btn-secondary" title="view">
                              <i class="fa fa-eye"></i>
@@ -553,8 +553,8 @@
                </div>
                 <div class="w3-third w3-margin-bottom w3-animate-zoom">
                   <div class="image-top">
-                   <a class="image-top" href="image/image7.jpg" data-caption="Goldern Bangla" style="width:99%;">
-                     <img class="img img-fluid" src="image/image7.jpg" alt="" style="width:100%;">
+                   <a class="image-top" href="image/city/3.jpg" data-caption="Goldern Bangla" style="width:99%;">
+                     <img class="img img-fluid" src="image/city/3.jpg" alt="" style="width:100%;">
                      <div class="like-view">
                       <button type="button" class="btn btn-secondary" title="view">
                          <i class="fa fa-eye"></i>
@@ -585,8 +585,8 @@
             <div class="baguetteBoxOne gallery">
                 <div class="w3-third w3-margin-bottom w3-animate-zoom">
                    <div class="image-top">
-                     <a class="image-top" href="image/image7.jpg" data-caption="Goldern Bangla" style="width:99%;">
-                      <img class="img img-fluid" src="image/image7.jpg" alt="" style="width:100%;">
+                     <a class="image-top" href="image/animal/1.jpg" data-caption="Goldern Bangla" style="width:99%;">
+                      <img class="img img-fluid" src="image/animal/1.jpg" alt="" style="width:100%;">
                         <div class="like-view">
                              <button type="button" class="btn btn-secondary" title="view">
                                  <i class="fa fa-eye"></i>
@@ -603,8 +603,8 @@
             </div>
              <div class="w3-third w3-margin-bottom w3-animate-zoom">
                 <div class="image-top">
-                  <a class="image-top" href="image/image7.jpg" data-caption="Goldern Bangla" style="width:99%;">
-                    <img class="img img-fluid" src="image/image7.jpg" alt="" style="width:100%;">
+                  <a class="image-top" href="image/animal/2.jpg" data-caption="Goldern Bangla" style="width:99%;">
+                    <img class="img img-fluid" src="image/animal/2.jpg" alt="" style="width:100%;">
                       <div class="like-view">
                          <button type="button" class="btn btn-secondary" title="view">
                            <i class="fa fa-eye"></i>
@@ -621,8 +621,8 @@
              </div>
               <div class="w3-third w3-margin-bottom w3-animate-zoom">
                 <div class="image-top">
-                 <a class="image-top" href="image/image7.jpg" data-caption="Goldern Bangla" style="width:99%;">
-                   <img class="img img-fluid" src="image/image7.jpg" alt="" style="width:100%;">
+                 <a class="image-top" href="image/animal/3.jpg" data-caption="Goldern Bangla" style="width:99%;">
+                   <img class="img img-fluid" src="image/animal/3.jpg" alt="" style="width:100%;">
                    <div class="like-view">
                     <button type="button" class="btn btn-secondary" title="view">
                        <i class="fa fa-eye"></i>
